Expose internal of core to benchmark project.

--- a/src/AdventOfCode.Core/AdventOfCode.Core.csproj
+++ b/src/AdventOfCode.Core/AdventOfCode.Core.csproj
@@ -10,4 +10,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="AdventOfCode.Benchmarks" />
+  </ItemGroup>
+
 </Project>
